add Redis configuration and client setup; update environment variables and package dependencies

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
 PORT=3000
 MONGODB_URI=mongodb://localhost:27017/AiDeveloper
 JWT_SECRET=AiDeveloper_secret_key
+REDIS_URL=redis-13319.c212.ap-south-1-1.ec2.redns.redis-cloud.com:13319
+REDIS_HOST=redis-13319.c212.ap-south-1-1.ec2.redns.redis-cloud.com
+REDIS_PORT=13319
+REDIS_PASSWORD=E1fHE2CJy49smirdTvq6fqYu5h3P2nqu
