feat: integrate Google GenAI for content generation

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ REDIS_URL=redis-13319.c212.ap-south-1-1.ec2.redns.redis-cloud.com:13319
 REDIS_HOST=redis-13319.c212.ap-south-1-1.ec2.redns.redis-cloud.com
 REDIS_PORT=13319
 REDIS_PASSWORD=E1fHE2CJy49smirdTvq6fqYu5h3P2nqu
+GOOGLE_AI_KEY=AIzaSyB3FdNtqUCBRoiL_K6PQGqqBhrtF3CyezM
